--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,10 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "test": "jest",
-    "migrate": "npx prisma migrate dev --name init",
+    "migrate": "npx prisma migrate dev --name schema",
     "prisma:studio": "npx prisma studio",
-    "prisma:generate": "npx prisma generate"
+    "prisma:generate": "npx prisma generate",
+    "prisma:reset": "npx prisma migrate reset"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.2",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -29,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "node-cache": "^5.1.2",
     "prisma": "^6.6.0",
     "razorpay": "^2.9.6",
     "swagger-jsdoc": "^6.2.8",
@@ -38,6 +41,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
