--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,8 @@
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
