--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.8.2",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.2",
     "bcrypt": "^5.1.1",
@@ -33,7 +33,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-cache": "^5.1.2",
-    "prisma": "^6.6.0",
     "razorpay": "^2.9.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -51,6 +50,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "cross-env": "^7.0.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.8.2"
   }
 }
